[tool.poetry]
name = "alphapeptstats"
version = "0.1.0"
description = ""
authors = ["Toan Phung <toan.phung@proteo.info>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.12"
pandas = "2.2.1"
scikit-learn = "1.4.2"
data_cache = ">=0.1.6"
plotly = "5.15.0"
statsmodels = "0.14.1"
sklearn_pandas = "2.2.0"
pingouin = "0.5.3"
scipy = "1.12.0"
tqdm = ">=4.64.0"
diffxpy = "0.7.4"
anndata = "0.9.1"
umap-learn = "0.5.3"
streamlit = "1.23.1"
tables = "3.7.0"
numpy = "1.26.4"
numba = "0.60.0"
numba-stats = "1.10.0"
swifter = "1.2.0"
click = ">=8.1.7,<9.0.0"
kaleido = "0.2.1"
combat = "0.3.3"
xlsxwriter = "3.1.0"
pyteomics = "4.6.0"
openpyxl = ">=3.0.10"
nbformat = ">=5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
